[package]
name = "status-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
webhook = "2.1.2"
